fix: header > ol > li > text is not on the center of the component ol > li using align-items:center

--- a/src/app/css/pages/landing.module.css
+++ b/src/app/css/pages/landing.module.css
@@ -233,7 +233,7 @@
       display: flex;
       & li{
         display: inherit;
-        text-align: center;
+        align-items: center;
         justify-content: center;
       }
     }
